# cubicbyte

./: CMakeLists.txt  README.md  cubicbyte.cpp  cubicbyte.h  main.cpp
